# TurtleBot4-Search-and-Follow-IRN

./: .gitignore  README.md
irn_g01/: .gitignore  package.xml  readme.md  requirements.txt  setup.cfg  setup.py
irn_g01/irn_g01/: BT_FSM_follow.py  aruco_reader.py  compute_pose.py  literals.py
tb4_project/: README.md  package.xml  setup.cfg  setup.py
tb4_project/behavior_trees/: BT_follow.xml  BT_search.xml
tb4_project/config/: diem_waypoints.yaml  diem_waypoints_reduced.yaml  localization_timeout.yaml  nav2_offline_planning.yaml  nav2_timeout.yaml  routes_smac2d_milp.yaml  routes_smac2d_milp_reduced.yaml
tb4_project/launch/: aruco_reader.launch.py  follow.launch.py  full_real.launch.py  localization_real.launch.py  nav2_monitored_navigation.launch.py  nav2_real.launch.py  real_search_mission.launch.py
tb4_project/tb4_project/: planner_cost_matrix.py  prova_waypoint_mission.py  recompute_route_costs.py
