<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tb4_project</name>
  <version>0.1.0</version>
  <description>ROS 2 launch files, Nav2 configuration and waypoint mission tools.</description>
  <maintainer email="feder@users.noreply.github.com">Federico</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>nav2_simple_commander</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_collision_monitor</depend>
  <depend>nav2_mppi_controller</depend>
  <depend>nav2_regulated_pure_pursuit_controller</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>python3-yaml</depend>
  <exec_depend>irn_g01</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
